--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,32 +1,7 @@
 /*---------------------------------------------------------------
-
-  Project Name: Branten - Personal Portfolio HTML Template
-  File Name: style.css
-  Author: Peng Lam
-  Author URI: http://khaitawng.com
-  Version: 1.0.0
-
-------------------------------------------------------------------*/
-/*----------------------------------------------------------------
-
-// Table of contents //
-
-        Body
-    0.  Typography
-    1.  Buttons
-    2.  General
-    3.  Preloader
-    4.  Navigation section
-    5.  Home section
-    6.  About section
-    7.  Service section
-    8.  Divider section
-    9.  Work section
-    10. Contact section
-    11. Footer section
-    12. Social icon
-    13. Mobile Responsive styles
-
+  Project Name: Piyush Verma | UI/UX Designer &amp; Front End Developer
+  Author: Piyush Verma
+  Author URI: http://thepiyushverma.com
 ------------------------------------------------------------------*/
 
 @import url('http://fonts.googleapis.com/css?family=Playfair+Display:400,700');
